# 2025-Project-186

./: .gitignore  README.rst  pyproject.toml
code/: m1p (1).ipynb  m1p.ipynb
experiments/: m1p_ivan.ipynb
experiments/accelerometr/: data.py  experiment.ipynb  vf.py
experiments/pendulum/: data.py  experiment.ipynb  experiment_sensitivity_analysis.ipynb  vf.py
paper/: main.tex  references.bib
