[tool.poetry]
name = "2025-project-186"
version = "0.1.0"
description = "Researching dynamical systems"
authors = ["your_name"]
readme = "README.rst"
include = [
    { path = "node" }
]

[tool.poetry.dependencies]
python = "^3.12"
torchdyn = "^1.0.6"
torchdiffeq = "^0.2.5"
wandb = "^0.19.9"
numpy = "^2.2.4"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
scipy = "^1.15.2"
lightning = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
